<resources>
    <string name="app_name">My Application</string>
    <string name="director">Director:</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_to">Similar To</string>
    <string name="personal_info">Personal Info</string>
    <string name="known_for">Known For</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="enter_your_email">Enter Your Email...</string>
    <string name="password">Password</string>
    <string name="join_us">Join Us</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">214768969809757</string>
    <string name="fb_login_protocol_scheme">fb214768969809757</string>
    <string name="enter_your_name">Enter Your Name...</string>
    <string name="enter_your_phone_number">Enter Your Phone Number...</string>

</resources>
