<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.PersonActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="171dp"
        android:layout_height="263dp"
        android:layout_marginTop="36dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/personal_info"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/personalInfoTextView"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/known_for"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:id="@+id/textViewBaseKnownFor"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/personalInfoTextView" />

    <TextView
        android:id="@+id/textViewKnownFor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseKnownFor" />

    <TextView
        android:id="@+id/textViewBaseGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/gender"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewKnownFor" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseGender" />
    <TextView
        android:id="@+id/textViewBaseBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/birthday"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewGender" />

    <TextView
        android:id="@+id/textViewBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseBirthday" />
    <TextView
        android:id="@+id/textViewBasePlaceOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/place_of_birth"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewBirthday" />

    <TextView
        android:id="@+id/textViewPlaceOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="#FFF"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@id/textViewBasePlaceOfBirth" />
    <TextView
        android:id="@+id/textViewPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageView" />
    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPersonName" />

    <TextView
        android:id="@+id/textViewBaseBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FFF"
        android:text="@string/biography"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine" />
    <com.ms.square.android.expandabletextview.ExpandableTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/textViewBio"
        android:layout_marginTop="8dp"
        app:maxCollapsedLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseBio">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:id="@+id/expandable_text"
            android:textSize="16sp"
/>
        <ImageButton
            android:id="@id/expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="right|bottom"
            android:background="@android:color/transparent"/>
    </com.ms.square.android.expandabletextview.ExpandableTextView>

    <TextView
        android:id="@+id/textViewBaseKnownForRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/known_for"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBio" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/recyclerViewKnownFor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBaseKnownForRecycler" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>